@@ -16,7 +16,13 @@
  */
 package org.apache.solr.util;
 
+import static com.carrotsearch.hppc.HashContainers.MIN_HASH_ARRAY_LENGTH;
+
+import com.carrotsearch.hppc.LongHashSet;
+import com.carrotsearch.hppc.LongSet;
+import com.carrotsearch.hppc.cursors.LongCursor;
 import java.util.HashSet;
+import java.util.Iterator;
 import org.apache.solr.SolrTestCase;
 import org.junit.Test;
 
@@ -24,69 +30,68 @@ public class LongSetTest extends SolrTestCase {
 
   @Test
   public void testZeroInitialCapacity() {
-    final LongSet ls = new LongSet(0);
-    assertEquals(0, ls.cardinality());
-    assertEquals(2, ls.getBackingArray().length);
-    assertFalse(ls.containsZero());
+    final LongHashSet ls = new LongHashSet(0);
+    assertEquals(0, ls.size());
+    assertEquals(MIN_HASH_ARRAY_LENGTH, ls.keys.length - 1); // -1 to correct for empty slot
+    assertFalse(ls.contains(0));
     assertFalse(ls.iterator().hasNext());
 
     final HashSet<Long> hs = new HashSet<>();
     for (long jj = 1; jj <= 10; ++jj) {
       assertTrue(ls.add(jj));
       assertFalse(ls.add(jj));
-      assertEquals(jj, ls.cardinality());
+      assertEquals(jj, ls.size());
       assertTrue(hs.add(jj));
       assertFalse(hs.add(jj));
     }
 
-    final LongIterator it = ls.iterator();
-    while (it.hasNext()) {
-      hs.remove(it.next());
+    for (LongCursor c : ls) {
+      hs.remove(c.value);
     }
     assertTrue(hs.isEmpty());
 
-    assertEquals(10, ls.cardinality());
-    assertEquals(16, ls.getBackingArray().length);
+    assertEquals(10, ls.size());
+    assertEquals(16, ls.keys.length - 1); // -1 to correct for empty slot
   }
 
   @Test
   public void testAddZero() {
-    final LongSet ls = new LongSet(1);
-    assertEquals(0, ls.cardinality());
-    assertFalse(ls.containsZero());
+    final LongSet ls = new LongHashSet(1);
+    assertEquals(0, ls.size());
+    assertFalse(ls.contains(0));
     assertFalse(ls.iterator().hasNext());
 
     assertTrue(ls.add(0L));
-    assertTrue(ls.containsZero());
+    assertTrue(ls.contains(0));
     assertFalse(ls.add(0L));
-    assertTrue(ls.containsZero());
+    assertTrue(ls.contains(0));
 
-    final LongIterator it = ls.iterator();
+    final Iterator<LongCursor> it = ls.iterator();
     assertTrue(it.hasNext());
-    assertEquals(0L, it.next());
+    assertEquals(0L, it.next().value);
     assertFalse(it.hasNext());
   }
 
   @Test
   public void testIterating() {
-    final LongSet ls = new LongSet(4);
+    final LongSet ls = new LongHashSet(4);
     assertTrue(ls.add(0L));
     assertTrue(ls.add(6L));
     assertTrue(ls.add(7L));
     assertTrue(ls.add(42L));
 
-    final LongIterator it = ls.iterator();
+    final Iterator<LongCursor> it = ls.iterator();
     // non-zero values are returned first
     assertTrue(it.hasNext());
-    assertNotEquals(0L, it.next());
+    assertNotEquals(0L, it.next().value);
     assertTrue(it.hasNext());
-    assertNotEquals(0L, it.next());
+    assertNotEquals(0L, it.next().value);
     assertTrue(it.hasNext());
-    assertNotEquals(0L, it.next());
+    assertNotEquals(0L, it.next().value);
 
     // and zero value (if any) is returned last
     assertTrue(it.hasNext());
-    assertEquals(0L, it.next());
+    assertEquals(0L, it.next().value);
     assertFalse(it.hasNext());
   }
 }
